--- a/style.css
+++ b/style.css
@@ -38,5 +38,6 @@ h2{text-align: center;}
 font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
 h4{
     color: cornsilk;
+    font-size: 50 px;
     }
 
